src/objects/LAB_MT1_Grandchild_1__c.object
<CustomObject>
    <fields>
        <fullName>LAB_MT1_Child_1__c</fullName>
        <label>MT1 Child 1</label>
        <referenceTo>LAB_MT1_Child_1__c</referenceTo>
        <relationshipLabel>MT1 Grandchildren 1</relationshipLabel>
        <relationshipName>MT1_Grandchildren_1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MT1_GC1_Date1__c</fullName>
        <label>MT1 GC1 Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT1_GC1_Number_1__c</fullName>
        <label>MT1 GC1 Number 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT1_GC1_Picklist_1__c</fullName>
        <label>MT1 GC1 Picklist 1</label>
        <picklist>
            <picklistValues>
                <fullName>MT1 GC1 P1 One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 GC1 P1 Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 GC1 P1 Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 GC1 P1 Four</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT1_GC1_Text_1__c</fullName>
        <label>MT1 GC1 Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MT1 Grandchild 1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MT1 Grandchild 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MT1 Grandchildren 1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>